Change the chests of the loot table item group that are from archaeology to suspect sand and gravel